# TransformerCompression

./: .amlignore  .gitignore  .pre-commit-config.yaml  README.md  SUPPORT.md  build_and_test.sh  pyproject.toml  run_all_opt.sh  setup.py  test.sh
experiments/: aml_quarot.py  aml_util.py  batch_size.sh  bo_finetuning.py  bo_options.py  load_quarot_model.py  quarot_lm_eval.py  run_benchmark.py  run_benchmark.sh  run_evaluate_perplexity.py  run_expt.sh  run_finetuning.py  run_finetuning.sh  run_finetuning_66opt_amd.sh  run_finetuning_llama_amd.sh  run_finetuning_opt_amd.sh  run_finetuning_phi2_v100.sh  run_lm_eval.py  run_load_sliced_model.py  run_opt.py  run_ppl_expts.sh  run_quarot.py  run_slicegpt.py  run_slicegpt_perplexity.py  run_zero_shot_eval.py  run_zero_shot_tasks.py  run_zeroshot_amd.sh  run_zeroshot_expts.sh  run_zeroshot_llama_amd.sh  run_zeroshot_llama_v100.sh  run_zeroshot_phi2_v100.sh  sandbox.ipynb
phi2_hf/: modeling_phi.py
pipelines/: pr-build.yml
src/quarot/: __init__.py  config_phi35.py  gptq.py  gptq_utils.py  hadamard_tensors.py  hadamard_utils.py  hf_utils.py  layernorm_fusion.py  model_adapter.py  model_phi35.py  model_utils.py  modeling_llama.py  modeling_mixtral.py  modeling_phi3.py  modeling_phi35.py  monkeypatch.py  quant_utils.py  rotate.py  rotation.py  rotation_utils.py  rtn.py  rtn_utils.py
src/quarot/adapters/: llama_adapter.py  mixtral_adapter.py  phi35_adapter.py  phi3_adapter.py
src/quarot/nn/: __init__.py  hadamard.py  linear.py  quantizer.py
src/slicegpt/: __init__.py  config.py  data_utils.py  datautils.py  gpu_utils.py  hf_utils.py  layer_adapter.py  layernorm_fusion.py  llama.py  llama_utils.py  ln_fn_saleh.py  model_adapter.py  model_utils.py  modules.py  opt.py  opt_modules.py  opt_utils.py  rotate.py  slicing_scheduler.py  utils.py
src/slicegpt/adapters/: hf_compatible_phi.py  llama_adapter.py  opt_adapter.py  phi2_adapter.py  phi2hf_adapter.py  phi3_adapter.py  sliced_llama.py  sliced_phi.py
src/slicegpt/model_code/: README  configuration_phi.py  modeling_phi.py
tests/: test_dataloading.py  test_download_model.py  test_experiments.py  test_experiments_quarot.py  test_gptq.py  test_int4.py  test_model_adapter.py  test_opt.py  test_quantizer.py  test_rotate.py  test_rtn.py  test_slicing.py
